--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/fontawesome-free-5.15.1-web/css/all.css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.1-web/css/all.css">
 </head>
 <body>
     <header class="first-header">
         <nav>
             <a href="#">
-                <img src="/image/logo_emag.svg" class="logo" alt="logo_emag">
+                <img src="image/logo_emag.svg" class="logo" alt="logo_emag">
             </a>
 
             <div class="search-div">
@@ -67,7 +67,7 @@
         <nav>
             <i class="fas fa-bars"></i>
             <a href="#">
-                <img src="/image/logo_emag.svg" class="logo" alt="logo_emag">
+                <img src="image/logo_emag.svg" class="logo" alt="logo_emag">
             </a>
 
             <div class="search-div">
@@ -246,7 +246,7 @@
 
                     <a href="#"> 
                         <div class="img">
-                            <img src="/image/tv.webp" alt="TV">
+                            <img src="image/tv.webp" alt="TV">
                         </div>                          
 
                         <p class="special-margins">Televizor Toshiba 49UA3A63DG, 123 cm, Smart Android, 4K Ultra HD, LED, Clasa A+</p>
@@ -304,7 +304,7 @@
 
         <section class="newsletter-sec">
             <div class="newsletter-container">
-                <img src="/image/newsletter-bg-resized.webp" alt="image-girls">
+                <img src="image/newsletter-bg-resized.webp" alt="image-girls">
 
                 <div>
                     <h3>Abonează-te la newsletter eMAG și află de reducerile cu timp limitat!</h3>
@@ -335,10 +335,10 @@
 
         <section class="marketplace">
             <div class="marketplace-div">
-                <img src="/image/banner_mktp_copy.png" alt="img-one-girl">
+                <img src="image/banner_mktp_copy.png" alt="img-one-girl">
 
                 <div>
-                    <img src="/image/mktp-logo.webp" alt="eMAG-Marketplace">
+                    <img src="image/mktp-logo.webp" alt="eMAG-Marketplace">
 
                     <h2>Creste-ti afacerea!</h2>
                     <ul>
@@ -383,7 +383,7 @@
                      href="https://play.google.com/store/apps/details?id=ro.emag.android"
                      target="_blank">
                         <img 
-                         src="/image/google-play-badge.svg"
+                         src="image/google-play-badge.svg"
                          alt="google-play-app">
                     </a>
     
@@ -391,7 +391,7 @@
                      href="https://apps.apple.com/ro/app/emag-ro/id935571974"
                      target="_blank">
                         <img 
-                         src="/image/apple-store-badge.svg" alt="apple-storage-app">
+                         src="image/apple-store-badge.svg" alt="apple-storage-app">
                     </a>    
                     
                 </div>
@@ -626,7 +626,7 @@
                      href="https://www.emag.bg/"
                      target="_blank">
                         <img
-                         src="/image/BG-Bulgaria-Flag-icon.png"
+                         src="image/BG-Bulgaria-Flag-icon.png"
                          alt="bg-flag">
                         emag.bg
                     </a>
@@ -635,13 +635,13 @@
                      href="https://www.emag.hu/"
                      target="_blank">
                         <img
-                         src="/image/HU-Hungary-Flag-icon.png"
+                         src="image/HU-Hungary-Flag-icon.png"
                          alt="hu-flag">
                         emag.hu
                     </a>
 
                     <img 
-                     src="/image/badge-partener-strategic.png"
+                     src="image/badge-partener-strategic.png"
                      alt="partener-badge">
                 </div>
             </div>
