New Update index.html

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
                                 <li>Dell</li>
                                 <li>Acer</li>
                                 <li>Accesorii laptop</li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Genti laptop</li>
+                                <li>Standuri/Coolere laptop</li>
+                                <li>Hard disk-uri notebook</li>
+                                <li>Telefoane mobile si accesorii</li>
+                                <li>Telefoane mobile</li>
+                                <li>Apple Shop</li>
+                                <li>Accesorii telefoane</li>
+                                <li>Huse telefoane</li>
+                                <li>Casti audio</li>
                             </ul>
                             
                         </div>
@@ -181,19 +181,23 @@
                         <span>TV, Audio-Video & Foto</span>
                         <div class="mega-menu-item">TV - Audio - Video</div>
                     </li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Electrocasnice & Climatizare</li>
+                    <li>Gaming, Carti & Birotica</li>
+                    <li>Bacanie</li>
+                    <li>Fashion</li>
+                    <li>Ingrijire personala & Cosmetice</li>
+                    <li>Casa, Gradina & Bricolaj</li>
+                    <li>Sport & Activitati in aer liber</li>
+                    <li>Auto, Moto & RCA</li>
+                    <li>Jucarii, Copii & Bebe</li>
                 </ul>
 
                 <div class="slider-container">
                     <div class="slider-img-container">
                         <div class="slider-images">
-                            <div></div>
+                            <div>
+                                <img src="https://s13emagst.akamaized.net/layout/ro/images/db//91/136900.jpg" title="StockBusters_Reveal" alt="StockBusters_Reveal">
+                            </div>
                             <div></div>
                             <div></div>
                         </div>
