Last update index.html

--- a/index.html
+++ b/index.html
@@ -195,9 +195,7 @@
                 <div class="slider-container">
                     <div class="slider-img-container">
                         <div class="slider-images">
-                            <div>
-<!--                                 <img src="https://s13emagst.akamaized.net/layout/ro/images/db//91/136900.jpg" title="StockBusters_Reveal" alt="StockBusters_Reveal"> -->
-                            </div>
+                            <div></div>
                             <div></div>
                             <div></div>
                         </div>
